feat: update all validator docs and delegator FAQ

--- a/docs/delegators/stake/withdraw.mdx
+++ b/docs/delegators/stake/withdraw.mdx
@@ -7,8 +7,8 @@ import stepTwo from './assets/withdraw-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
 # Withdraw stake
-You can withdraw a part of, or all of your stake from a validator,
-as long as it's been three days since your last staking operation on Ronin.
+You can withdraw your stake at any time without penalties as
+long as three days have passed since you last staked in.
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
