--- a/docs/node-operators/mainnet/validator.mdx
+++ b/docs/node-operators/mainnet/validator.mdx
@@ -38,9 +38,9 @@ You can do that in one of the two ways:
 
 * You must be a root user.
 * Your machine must meet the minimum hardware requirements:
-  * 8 CPU cores
+  * 8-core CPU
   * 32 GB RAM
-  * 700 GB SSD
+  * 700 GB high-speed SSD
 * You need to have [docker-compose](https://docs.docker.com/compose/install/) installed.
 
 ## Set up and run
