--- a/docs/validators/governance/create.mdx
+++ b/docs/validators/governance/create.mdx
@@ -11,9 +11,9 @@ import stepFour from './assets/fill-in-details.png';
 This guide explains how to create a proposal. 
 
 There are two ways to create proposals on Ronin:
-via Validator Dashboard or via a script.
+via Validator Dashboard or by running a script.
 
-Following are some types of proposals that can be created on tne dashboard:
+You can create the following proposals using the dashboard:
 * Add a new Governing Validator
 * Remove a Governing Validator
 * Update the Chain Governor address
@@ -25,7 +25,6 @@ The example used here is a proposal for adding a new Governing Validator.
 Make sure that the validator that you want to add has already [registered](../onboarding/become-validator.mdx) as a Validator Candidate.
 
 ## Create and submit a proposal
-
 1. Log in to [Validator Dashboard](https://validator.roninchain.com)
 with your *chain governor* address—the identifier of a Governing Validator.
 The name of your role at the top right corner is a sign that
