--- a/docs/validators/stake/withdraw.mdx
+++ b/docs/validators/stake/withdraw.mdx
@@ -6,8 +6,8 @@ import stepTwo from './assets/withdraw-stake-step-2.png';
 import confirmTransaction from './assets/confirm-transaction.png';
 
 # Withdraw stake
-You can withdraw part of your stake to your wallet as long as it’s been
-three days since you last staked in, and provided that the minimum staking
+You can withdraw part of your stake as long as three days have passed
+since you last staked in, and provided that the minimum staking
 amount is maintained after withdrawal.
 
 :::caution
