--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -8,6 +8,7 @@ import stepTwo from './assets/onboarding-step-2.png'
 import stepThree from './assets/onboarding-step-3.png'
 import stepFour from './assets/onboarding-step-4.png'
 import stepFive from './assets/onboarding-step-5.png'
+import stepSix from './assets/onboarding-step-6.png'
 
 # Become a validator
 This page explains how to register as a validator on Ronin.
@@ -20,7 +21,7 @@ There are three validator roles:
 * **Validator Candidate.** The role you get after following the steps
 in this guide.
 * **Standard Validator.** Every day, at least 10 Validator Candidates
-with the highest amount staked are selected as Standard Validators.
+with the highest stakes are selected as Standard Validators.
 The system records your total staking amount at 00:00 UTC every day
 for the selection process. 
 * **Governing Validator.** The validators chosen by the community and
@@ -29,11 +30,10 @@ validators by default, and they account for more than half of the
 total validator set.
 
 ## Prerequisites
-* You need to have an amount of RON sufficient for the initial stake.
-* You also need to have 100 RON as a starting balance to maintain the bridge. 
+* Prepare at least 250,000 RON for the initial stake.
+* Prepare 100 RON as a starting balance to maintain the bridge. 
 
 ## Register
-
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) > **Become a Validator**. 
 <img src={becomeValidator} width={1280} />
 
@@ -51,7 +51,7 @@ It's also highly recommended that you read the
 5. Deposit 100 RON into the bridge operator address. This address
 is used to automatically sign transactions on the bridge every epoch,
 and having a starting balance there will help you avoid
-[bridge operator slashing](./../slashing/slashing.mdx) if you're
+[bridge operator slashing](./../slashing/slashing.mdx#unavailability-bridge-operator) if you're
 selected as a validator. 
 <img src={stepFour} width={1280} />
 
@@ -59,3 +59,4 @@ selected as a validator.
 <img src={stepFive} width={1280} />
 
 Done! You're now a Validator Candidate.
+<img src={stepSix} width={1280} />
