--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -7,20 +7,18 @@ import stepOne from './assets/val-slash-tier-2.png';
 import stepTwo from './assets/confirm-bailout.png';
 
 # Bailout
-
 ## Overview
-
-If you're in [tier 2 validator slashing](slashing.mdx), you can bail out
+If you're in [tier 2 validator slashing](slashing.mdx#tier-2-validator-slashing), you can bail out
 of jail at any time using your credit score.
-
-The credit score is calculated as follows:
-* All validators start with a 0 credit score.
-* Every day, each validator (who is not in jail) is given 50 credits
+  
+Here's how the credit score system works:
+* All validators start with 0 credit score.
+* Every day, each validator (who is not in jail) is given 50 credits 
 if they miss no block. The validator loses 1 credit for every missed block.
-* The maximum number of credits for a validator is 1,800.
+* The maximum number of credits for a validator is 600.
+* It takes 2 credits to bail out for each epoch.
 
 ## Check your credit score
-
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
 **My Staking**.
 2. Find your credit score under **CREDIT SCORE**, next to your total
@@ -28,17 +26,15 @@ self-stake amount.
 <img src={creditScore} width={1280} />
 
 ## Use credit score to bail out
-It takes 5 credits to bail out for each epoch.
-
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
 **My Staking**.
 
 2. Locate the warning banner and select **Bail out**.
 <img src={stepOne} width={1224} /> 
 
-3. Review the terms of bailout and click **Submit**. 
+3. Review the terms of bailout submit the request. 
 <img src={stepTwo} width={400} />
 
 If you bail out on the same day you got slashed, you still receive 50%
-of the block reward (commission and staking) from the time you bailed
+of the block rewards (commission and staking) from the time you bailed
 out until the end of the day.
