refactor node operator FAQ and update slashing and governance

--- a/docs/validators/governance/create.mdx
+++ b/docs/validators/governance/create.mdx
@@ -8,25 +8,13 @@ import stepThree from './assets/select-proposal-type.png';
 import stepFour from './assets/fill-in-details.png';
 
 # Create a proposal
-This guide explains how to create a proposal. 
+This guide explains how to create a proposal through the example of
+adding a new Governing Validator. Make sure that this validator has
+already [registered](../onboarding/become-validator.mdx)
+as a Validator Candidate.
 
-There are two ways to create proposals on Ronin:
-via Validator Dashboard or by running a script.
-
-You can create the following proposals using the dashboard:
-* Add a new Governing Validator
-* Remove a Governing Validator
-* Update the Chain Governor address
-* Update the Bridge Voter address
-
-The example used here is a proposal for adding a new Governing Validator.
-
-## Prerequisites
-Make sure that the validator that you want to add has already [registered](../onboarding/become-validator.mdx) as a Validator Candidate.
-
-## Create and submit a proposal
 1. Log in to [Validator Dashboard](https://validator.roninchain.com)
-with your *chain governor* address—the identifier of a Governing Validator.
+using your *chain governor* address—the identifier of a Governing Validator.
 The name of your role at the top right corner is a sign that
 you used the correct address.
 <img src={stepOne} width={1280} />
