--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -51,8 +51,8 @@ It's also highly recommended that you read the
 5. Deposit 100 RON into the bridge operator address. This address
 is used to automatically sign transactions on the bridge every epoch,
 and having a starting balance there will help you avoid
-[bridge operator slashing](./../slashing/slashing.mdx#unavailability-bridge-operator) if you're
-selected as a validator. 
+[slashing](./../slashing/slashing.mdx#unavailability-bridge-operator)
+if you end up being selected as a validator. 
 <img src={stepFour} width={1280} />
 
 6. Provide the initial stake of RON.
