--- a/docs/validators/governance/vote.mdx
+++ b/docs/validators/governance/vote.mdx
@@ -10,14 +10,8 @@ import stepFour from './assets/fill-in-details.png';
 # Vote on a proposal
 As a Governing Validator, you can vote on proposals created by the other Governing Validators.
 
-## Voting ratio
-* A proposal is approved if at least 75% of the Governing Validators approve it.
-* A proposal is rejected (and closed) if at least 25% of the Governing Validators reject it.
-* A proposal that is neither approved nor rejected within 14 days is automatically closed.
-
-## Cast your vote
 1. Log in to [Validator Dashboard](https://validator.roninchain.com)
-with your *chain governor* address—the identifier of a Governing Validator.
+using your *chain governor* address—the identifier of a Governing Validator.
 The name of your role at the top right corner is a sign that
 you used the correct address.
 <img src={stepOne} width={1280} />
@@ -27,3 +21,6 @@ you used the correct address.
 
 3. Confirm your decision and sign the transaction.
 <img src={stepThree} width={400} />
+
+The proposal is approved if at least 75% Governing Validators approve it, or rejected if at least 25% Governing Validators reject it.
+If the proposal is neither approved nor rejected after 14 days, the system closes it automatically.
