Update versions to bridge and validators

--- a/docs/node-operators/testnet/validator.mdx
+++ b/docs/node-operators/testnet/validator.mdx
@@ -34,8 +34,8 @@ Snapshot: `https://storage.googleapis.com/testnet-chaindata/chaindata-22-3-2023.
 Snapshot checksum using Md5sum: `741d0c68de1107547b849395c17f0f41`.
 
 ### Bridge operator
-* [https://github.com/axieinfinity/bridge-v2/releases/tag/0.2.1](https://github.com/axieinfinity/bridge-v2/releases/tag/0.2.1)
-* [ghcr.io/axieinfinity/bridge:0.2.1-c15a725](https://github.com/axieinfinity/bridge-v2/pkgs/container/bridge/67046431?tag=0.2.1-c15a725)
+* [https://github.com/axieinfinity/bridge-v2/releases/tag/v0.2.3](https://github.com/axieinfinity/bridge-v2/releases/tag/v0.2.3)
+* [ghcr.io/axieinfinity/bridge:v0.2.3-56f7328](https://github.com/axieinfinity/bridge-v2/pkgs/container/bridge/80601341?tag=v0.2.3-56f7328)
 
 ## Prerequisites
 
@@ -220,8 +220,8 @@ vim .env
     MINE=true
 
     CONFIG_PATH=config.testnet.json
-    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9
-    BRIDGE_IMAGE=ghcr.io/axieinfinity/bridge:0.2.1-c15a725
+    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.2-9bf4895
+    BRIDGE_IMAGE=ghcr.io/axieinfinity/bridge:v0.2.3-56f7328
     VERBOSITY=3
 
     RONIN_TASK_INTERVAL=3
@@ -261,7 +261,7 @@ vim .env
     MINE=true
 
     CONFIG_PATH=config.testnet.json
-    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9
+    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.2-9bf4895
     VERBOSITY=3
 
     CHAIN_STATS_WS_SECRET=xQj2MZPaN6
