--- a/docs/node-operators/mainnet/validator.mdx
+++ b/docs/node-operators/mainnet/validator.mdx
@@ -31,8 +31,8 @@ You can do that in one of the two ways:
 * [ghcr.io/axieinfinity/ronin:v2.5.2-9bf4895](https://github.com/axieinfinity/ronin/pkgs/container/ronin/80511518?tag=v2.5.2-9bf4895)
 
 ### Bridge operator
-* [https://github.com/axieinfinity/bridge-v2/releases/tag/0.2.1](https://github.com/axieinfinity/bridge-v2/releases/tag/0.2.1)
-* [ghcr.io/axieinfinity/bridge:0.2.1-c15a725](https://github.com/axieinfinity/bridge-v2/pkgs/container/bridge/67046431?tag=0.2.1-c15a725)
+* [https://github.com/axieinfinity/bridge-v2/releases/tag/v0.2.3](https://github.com/axieinfinity/bridge-v2/releases/tag/v0.2.3)
+* [ghcr.io/axieinfinity/bridge:v0.2.3-56f7328](https://github.com/axieinfinity/bridge-v2/pkgs/container/bridge/80601341?tag=v0.2.3-56f7328)
 
 ## Prerequisites
 
@@ -216,7 +216,7 @@ vim .env
     ETHEREUM_ENDPOINT=https://eth-mainnet.g.alchemy.com/v2/your-ethereum-endpoint
     MINE=true
 
-    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9
+    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.2-9bf4895
     BRIDGE_IMAGE=ghcr.io/axieinfinity/bridge:0.2.1-c15a725
     VERBOSITY=3
 
@@ -255,7 +255,7 @@ vim .env
     
     MINE=true
 
-    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9
+    NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.2-9bf4895
     VERBOSITY=3
 
     CHAIN_STATS_WS_SECRET=xQj2MZPaN6
