--- a/docs/node-operators/testnet/validator.mdx
+++ b/docs/node-operators/testnet/validator.mdx
@@ -284,7 +284,7 @@ mv chaindata-22-3-2023 chaindata
 8. Start the node:
 
 ```
-docker-compose up -d 
+cd /axie/ronin-manager && docker-compose up -d
 ```
 
 After a few minutes, go to the [stats page](https://saigon-stats.roninchain.com/) to check the status of your node. If it's green, the node is connected and up to date with the network.
