refactor sidebar, navbar, descriptions

--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -1,5 +1,5 @@
 ---
-description: Delegate your RON tokens to a validator
+description: Delegate your RON tokens to a validator.
 ---
 
 import myStaking from './assets/my-staking.png'
