--- a/docs/delegators/onboarding/purchase-ron.mdx
+++ b/docs/delegators/onboarding/purchase-ron.mdx
@@ -1,6 +1,6 @@
 ---
 title: Buy RON
-description: Learn where to get RON
+description: Learn where to get RON.
 ---
 import purchaseSite from './assets/purchase-site.png'
 import katanaSite from './assets/katana-site.png'
