--- a/docs/delegators/stake/increase.mdx
+++ b/docs/delegators/stake/increase.mdx
@@ -1,5 +1,5 @@
 ---
-description: Add more RON to your existing stake
+description: Add more RON to your existing stake.
 ---
 
 import stepOne from './assets/increase-stake-step-1.png'
