--- a/docs/delegators/stake/withdraw.mdx
+++ b/docs/delegators/stake/withdraw.mdx
@@ -1,5 +1,5 @@
 ---
-description: Withdraw your stake partially or completely
+description: Unstake from your validators.
 ---
 
 import stepOne from './assets/withdraw-step-1.png'
