--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,5 +1,5 @@
 ---
-description: An overview of this documentation
+description: Your starting point in this documentation.
 ---
 
 import DocCardList from '@theme/DocCardList'; 
@@ -8,14 +8,16 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 # Get started
 
 ### Learn about Ronin
-These guides provide general overview of Ronin and introduce basic tools
-to get you started.
+These guides provide general overview of Ronin and
+introduce basic concepts to get you started.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/basics/introduction'),
     findSidebarItem('/docs/basics/key-concepts'),
     findSidebarItem('/docs/basics/white-paper'),
+    findSidebarItem('/docs/basics/roadmap'),
     findSidebarItem('/docs/basics/tokenomics'),
+    findSidebarItem('/docs/basics/rewards'),
     findSidebarItem('/docs/basics/dapps'),
     findSidebarItem('/docs/basics/roles'),
     ]} />
@@ -35,8 +37,8 @@ how to delegate your stake and transfer it between validators.
 
 ### Run your own Ronin node
 If you want to run your own Ronin node, these guides explain how to set
-up and run a validator node, an archive node, or a node for your server to submit transactions
-and perform queries on the network.
+up and run a validator node, an archive node, or an RPC node for your
+server to submit transactions and perform queries on the network.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/node-operators/cli'),
@@ -59,17 +61,17 @@ claim rewards, and manage your validator profile.
     ]} />
 
 ### Build on Ronin
-If you're looking to build a decentralized application on Ronin, these guides are for you.
+If you're looking to build a decentralized application on Ronin,
+this section is for you.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/developers/portal'),
     ]} />
 
 ### Get involved
-Learn how to get in touch with the Ronin community and
-how to contribute to the documentation.
+Learn how to get in touch with the Ronin community.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/community/join'),
-    findSidebarItem('/docs/community/contribute'),
+    // findSidebarItem('/docs/community/contribute'),
     ]} />
