--- a/docs/node-operators/mainnet/validator.mdx
+++ b/docs/node-operators/mainnet/validator.mdx
@@ -1,5 +1,5 @@
 ---
-description: Set up a validator node on mainnet
+description: Set up a validator node on mainnet.
 ---
 
 import Tabs from '@theme/Tabs';
