--- a/docs/node-operators/testnet/validator.mdx
+++ b/docs/node-operators/testnet/validator.mdx
@@ -1,5 +1,5 @@
 ---
-description: Set up a validator node on testnet
+description: Set up a validator node on testnet.
 ---
 
 import Tabs from '@theme/Tabs';
