--- a/docs/validators/governance/create.mdx
+++ b/docs/validators/governance/create.mdx
@@ -1,5 +1,5 @@
 ---
-description: How to create a proposal as a Governing Validator
+description: Create a proposal for a change in the network.
 ---
 
 import stepOne from './assets/governing-label.png';
@@ -14,9 +14,8 @@ already [registered](../onboarding/become-validator.mdx)
 as a Validator Candidate.
 
 1. Log in to [Validator Dashboard](https://validator.roninchain.com)
-using your *chain governor* address—the identifier of a Governing Validator.
-The name of your role at the top right corner is a sign that
-you used the correct address.
+using your chain governor address. The name of your role at the top
+right corner is a sign that you used the correct address.
 <img src={stepOne} width={1280} />
 
 2. Select **Proposals** > **Add a proposal**.
