--- a/docs/validators/manage/analytics.mdx
+++ b/docs/validators/manage/analytics.mdx
@@ -1,5 +1,5 @@
 ---
-description: View analytics on your performance as a validator
+description: View your performance analytics.
 title: View analytics
 ---
 
