--- a/docs/validators/manage/commission.mdx
+++ b/docs/validators/manage/commission.mdx
@@ -1,5 +1,5 @@
 ---
-description: Adjust your commission rate
+description: Set a different commission rate.
 ---
 
 import stepOne from './assets/change-commission-step-1.png';
