--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -1,5 +1,5 @@
 ---
-description: Schedule maintenance for your node
+description: Schedule maintenance for your node.
 ---
 
 import stepOne from './assets/schedule-maintenance-step-1.png';
