--- a/docs/validators/manage/profile.mdx
+++ b/docs/validators/manage/profile.mdx
@@ -1,5 +1,5 @@
 ---
-description: View your linked addresses and profile details
+description: View your linked addresses and profile details.
 title: View profile
 ---
 
