--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -1,5 +1,5 @@
 ---
-description: Register as a Validator Candidate to be selected as a validator
+description: Register as a Validator Candidate to be selected as a validator.
 ---
 
 import becomeValidator from './assets/become-validator.png';
