--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -1,6 +1,6 @@
 ---
 label: Claim rewards
-description: Claim staking rewards
+description: Claim staking reward.
 ---
 
 import stepOne from './assets/claim-step-1.png';
@@ -17,11 +17,10 @@ in the end of each period (approximately one day).
 You can, however, keep track of these rewards under
 **My Staking** > **Activities**.
 
-## Staking rewards
-Staking rewards are calculated each period (approximately one day)
-and displayed as “claimable rewards”.
-
-You need to claim these rewards manually.
+## Staking reward
+Staking reward is calculated each period (approximately one day)
+and displayed as “claimable rewards”. 
+You need to claim this reward manually.
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com) >
 **My Staking** > **Claim all**.
@@ -33,4 +32,4 @@ You need to claim these rewards manually.
 3. Confirm the transaction.
 <img src={confirmTransaction} width={400} />
 
-After the transaction is confirmed, the rewards are credited to your wallet.
+After the transaction is confirmed, the reward is credited to your wallet.
