--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -1,5 +1,5 @@
 ---
-description: Use credit score to bail out of jail
+description: Use credit score to bail out of jail.
 ---
 
 import creditScore from './assets/credit-score.png';
