--- a/docs/validators/stake/increase.mdx
+++ b/docs/validators/stake/increase.mdx
@@ -1,5 +1,5 @@
 ---
-description: Increase your stake by depositing more RON
+description: Increase your stake by depositing more RON.
 ---
 import stepOne from './assets/increase-stake-step-1.png';
 import stepTwo from './assets/increase-stake-step-2.png';
