--- a/docs/validators/stake/withdraw.mdx
+++ b/docs/validators/stake/withdraw.mdx
@@ -1,5 +1,5 @@
 ---
-description: Withdraw part of your stake
+description: Withdraw part of your stake.
 ---
 import stepOne from './assets/withdraw-stake-step-1.png';
 import stepTwo from './assets/withdraw-stake-step-2.png';
