feat: add coins.ph

--- a/docs/delegators/onboarding/buy-ron.mdx
+++ b/docs/delegators/onboarding/buy-ron.mdx
@@ -25,6 +25,7 @@ Here's a list of exchanges that support RON:
 * [CoinEx](https://www.coinex.com/)
 * [MEXC Global](https://www.mexc.com/)
 * [Bitget](https://www.bitget.com/)
+* [Coins.ph](https://coins.ph/)
 
 :::info
 If you are a centralized exchange looking to list RON,
