refactor Basics guide before publication

--- a/docs/delegators/rewards/claim.mdx
+++ b/docs/delegators/rewards/claim.mdx
@@ -1,13 +1,13 @@
 ---
-description: Claim staking rewards.
+description: Claim staking reward.
 ---
 import stepOne from './assets/claim-step-1.png'
 import stepTwo from './assets/claim-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
-# Claim rewards
-Staking rewards do not automatically re-stake to your validators,
-and instead need to be claimed manually.
+# Claim reward
+Staking reward doesn't automatically re-stakes to your validators,
+and instead needs to be claimed manually.
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
@@ -19,3 +19,5 @@ and instead need to be claimed manually.
 
 4. Confirm the transaction.
 <img src={stepThree} width={400} />
+
+After the transaction is confirmed, the reward is credited to your wallet.
