refactor Community and Get started pages, and deleted Resources section

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -34,21 +34,9 @@ how to delegate your stake and transfer it between validators.
     findSidebarItem('/docs/delegators/faq'),
     ]} />
 
-### Run your own Ronin node
-If you want to run your own Ronin node, these guides explain how to set
-up and run a validator node, an archive node, or an RPC node for your
-server to submit transactions and perform queries on the network.
-
-<DocCardList items={[ 
-    findSidebarItem('/docs/node-operators/cli'),
-    findSidebarItem('/docs/node-operators/mainnet'),
-    findSidebarItem('/docs/node-operators/testnet'),
-    findSidebarItem('/docs/node-operators/security'),
-    findSidebarItem('/docs/node-operators/faq'),
-    ]} />
-
-These guides describe how to register as a validator, stake tokens,
-claim rewards, and manage your validator profile.
+### Join as a validator 
+These guides describe how to become a validator
+and manage the validator's profile.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/validators/onboarding/become-validator'),
@@ -57,20 +45,30 @@ claim rewards, and manage your validator profile.
     findSidebarItem('/docs/validators/manage'),
     findSidebarItem('/docs/validators/slashing'),
     findSidebarItem('/docs/validators/governance'),
+    findSidebarItem('/docs/validators/faq'),
+    ]} />
+
+While these explain how to set up and run a node.
+
+<DocCardList items={[ 
+    findSidebarItem('/docs/node-operators/mainnet/validator'),
+    findSidebarItem('/docs/node-operators/mainnet/bridge'),
+    findSidebarItem('/docs/node-operators/mainnet/non-validator'),
+    findSidebarItem('/docs/node-operators/mainnet/archive'),
+    findSidebarItem('/docs/node-operators/faq'),
     ]} />
 
 ### Build on Ronin
-If you're looking to build a decentralized application on Ronin,
-this section is for you.
-
-<DocCardList items={[ 
-    findSidebarItem('/docs/developers/portal'),
-    ]} />
+Looking to build and deploy your project on Ronin? The developer
+documentation is available on the Sky Mavis Developer Portal:
+[https://docs.skymavis.com](https://docs.skymavis.com/docs/getting-started)
 
 ### Get involved
-Learn how to get in touch with the Ronin community.
+#### Social media
+Stay informed on the latest Ronin news, events, and programs:
 
-<DocCardList items={[ 
-    findSidebarItem('/docs/community/join'),
-    // findSidebarItem('/docs/community/contribute'),
-    ]} />
+* [Discord](https://discord.gg/P5GgF7SK)
+* [Twitter](https://twitter.com/ronin_network)
+
+#### Newsletter
+Sign up to [Ronin's Newsletter](https://roninblockchain.substack.com/)
